# rust-hpke

./: .clippy.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  test-vectors-325c94f.json  test-vectors-76e2596.json  test-vectors-d1dbba6.json  test-vectors-go-8aa8a04.json  test-vectors-modified.json  test-vectors-prerelease.json  test-vectors-secp256k1.json
.github/workflows/: ci.yml  security_audit.yml
benches/: benches.rs
examples/: agility.rs  client_server.rs
src/: aead.rs  dh.rs  dhkex.rs  easy.rs  fursona.txt  kat_tests.rs  kdf.rs  kem.rs  kex.rs  lib.rs  op_mode.rs  prelude.rs  scratch.rs  serde_impls.rs  setup.rs  single_shot.rs  streaming_enc.rs  test_util.rs  util.rs
src/aead/: aes_gcm.rs  chacha20_poly1305.rs  export_only.rs
src/dhkex/: ecdh_nist.rs  ecdh_nistp.rs  x25519.rs
src/dhkex/ecdh_nistp/: p256.rs  p384.rs
src/kdf/: one_stage_kdf.rs  two_stage_kdf.rs
src/kem/: dhkem.rs  mlkem768p256.rs  xwing.rs  xyber768d00.rs
src/kex/: ecdh_nistp.rs  x25519.rs
test-vectors/: hybrid-defafa2.json  pq-53273fb.json
