[package]
name = "hpke"
repository = "https://github.com/rozbb/rust-hpke"
documentation = "https://docs.rs/hpke"
description = "An implementation of the HPKE hybrid encryption standard (RFC 9180) in pure Rust"
readme = "README.md"
version = "0.14.0-pre.1"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2021"
license = "MIT/Apache-2.0"
keywords = ["cryptography", "crypto", "key-exchange", "encryption", "aead"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[features]
# "p256" enables the use of ECDH-NIST-P256 as a KEM
# "p384" enables the use of ECDH-NIST-P384 as a KEM
# "x25519" enables the use of the X25519 as a KEM
# "aes-gcm" enables AES-GCM AEAD algorithms (AES-128-GCM and AES-256-GCM)
# "chacha20poly1305" enables ChaCha20-Poly1305 AEAD algorithm
# "xwing" enables the use of X-Wing hybrid post-quantum KEM
default = ["alloc", "p256", "x25519", "aes-gcm", "chacha20poly1305"]
x25519 = ["dep:x25519-dalek"]
p256 = ["dep:p256"]
p384 = ["dep:p384"]
p521 = ["dep:p521"]
aes-gcm = ["dep:aes-gcm"]
chacha20poly1305 = ["dep:chacha20poly1305"]
xwing = ["dep:x-wing"]
# Include allocating methods like open() and seal()
alloc = []
# Used to enable known-answer tests. Implies alloc and all other features
kat = ["alloc", "x25519", "p256", "p384", "p521", "xwing"]
hazmat-streaming-enc = []

[dependencies]
aead = { version = "0.6.0-rc.10", default-features = false }
aes-gcm = { version = { version = "=0.11.0-rc.3", default-features = false, features = ["aes"] }, optional = true }
chacha20poly1305 = { version = { version = "=0.11.0-rc.3", default-features = false }, optional = true }
hybrid-array = "0.4"
hkdf = { version = "=0.13.0-rc.5", default-features = false }
rand_core = { version = "0.10.0", default-features = false }
p256 = { version = "0.13", default-features = false, features = [
    "arithmetic",
    "ecdh",
], optional = true }
p384 = { version = "0.13", default-features = false, features = [
    "arithmetic",
    "ecdh",
], optional = true }
p521 = { version = "0.13", default-features = false, features = [
    "arithmetic",
    "ecdh",
], optional = true }
sha2 = { version = "=0.11.0-rc.5", default-features = false }
sha3 = { version = "=0.11.0-rc.7", default-features = false }
subtle = { version = "2.6", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = [
    "static_secrets",
], optional = true }
x-wing = { version = "0.1.0-pre.6", optional = true, default-features = false, features = ["hazmat"] }
zeroize = { version = "1", default-features = false, features = [
    "zeroize_derive",
] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
hex = "0.4"
hex-literal = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { git = "https://github.com/rust-random/rand.git", rev = "9c98f59e8b042e5c7c714e933e49b384a4ce75a6", features = [ "thread_rng" ] }

[[example]]
name = "client_server"
required-features = ["x25519", "chacha20poly1305"]

[[example]]
name = "agility"
required-features = ["p256", "p384", "p521", "x25519", "aes-gcm", "chacha20poly1305"]

# Tell docs.rs to build docs with `--all-features` and `--cfg docsrs` (for nightly docs features)
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Criteron benches
[[bench]]
name = "benches"
harness = false

[lib]
bench = false
