[package]
name = "hpke"
repository = "https://github.com/rozbb/rust-hpke"
documentation = "https://docs.rs/hpke"
description = "An implementation of the HPKE hybrid encryption standard (RFC 9180) in pure Rust"
readme = "README.md"
version = "0.14.0-pre.2"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2021"
license = "MIT/Apache-2.0"
keywords = ["cryptography", "crypto", "key-exchange", "encryption", "aead"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[features]
# "p256" enables the use of ECDH-NIST-P256 as a KEM
# "p384" enables the use of ECDH-NIST-P384 as a KEM
# "x25519" enables the use of the X25519 as a KEM
# "aes" enables AES-GCM AEAD algorithms (AES-128-GCM and AES-256-GCM)
# "chacha" enables ChaCha20-Poly1305 AEAD algorithm
# "xwing" enables the use of X-Wing hybrid post-quantum KEM
# "mlkem768p256" enables the use of MLKEM768-P256 hybrid post-quantum KEM
default = ["getrandom", "alloc", "p256", "x25519", "aes", "chacha"]
x25519 = ["dep:x25519-dalek"]
p256 = ["dep:p256"]
p384 = ["dep:p384"]
p521 = ["dep:p521"]
aes = ["dep:aes-gcm"]
chacha = ["dep:chacha20poly1305"]
xwing = ["dep:x-wing"]
mlkem768p256 = ["dep:ml-kem", "dep:p256"]
# Include allocating methods like open() and seal()
alloc = []
# Enable RNG-less top-level functions
getrandom = ["dep:getrandom"]
# Used to enable known-answer tests. Implies alloc and all other features
kat = ["alloc", "x25519", "p256", "p384", "p521", "xwing", "mlkem768p256"]
hazmat-streaming-enc = []

[dependencies]
aead = { version = "=0.6.0-rc.10", default-features = false }
aes-gcm = { version = "=0.11.0-rc.3", default-features = false, features = ["aes"], optional = true }
chacha20poly1305 = { version = "=0.11.0-rc.3", default-features = false, optional = true }
getrandom = { version = "0.4", default-features = false, features = ["sys_rng"], optional = true }
hybrid-array = "0.4.11" # Adds HPKE Hybrid KEM sizes
hkdf = { version = "0.13", default-features = false }
rand_core = { version = "0.10.0", default-features = false }
ml-kem = { version = "=0.3.0-rc.2", default-features = false, optional = true }
p256 = { version = "=0.14.0-rc.9", default-features = false, features = [
    "arithmetic",
    "ecdh",
], optional = true }
p384 = { version = "=0.14.0-rc.9", default-features = false, features = [
    "arithmetic",
    "ecdh",
], optional = true }
p521 = { version = "=0.14.0-rc.9", default-features = false, features = [
    "arithmetic",
    "ecdh",
], optional = true }
sha2 = { version = "0.11", default-features = false }
sha3 = { version = "0.11", default-features = false }
subtle = { version = "2.6", default-features = false }
x25519-dalek = { version = "=3.0.0-pre.6", default-features = false, features = [
    "static_secrets",
], optional = true }
x-wing = { version = "=0.1.0-rc.0", optional = true, default-features = false, features = ["hazmat"] }
zeroize = { version = "1", default-features = false, features = [
    "zeroize_derive",
] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
hex = "0.4"
hex-literal = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { git = "https://github.com/rust-random/rand.git", rev = "9c98f59e8b042e5c7c714e933e49b384a4ce75a6", features = [ "thread_rng" ] }

[[example]]
name = "client_server"
required-features = ["getrandom", "x25519", "chacha"]

[[example]]
name = "agility"
required-features = ["getrandom", "p256", "p384", "p521", "x25519", "aes", "chacha"]

# Tell docs.rs to build docs with `--all-features` and `--cfg docsrs` (for nightly docs features)
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Criteron benches
[[bench]]
name = "benches"
harness = false
required-features = ["getrandom"]

[lib]
bench = false
